hphp/hack/test/typecheck/inout/bad_inout_use_lvalue8.php.exp
File "bad_inout_use_lvalue8.php", line 15, characters 5-16:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
`?->` operator is not allowed in write context (Parsing[1002])
File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
File "bad_inout_use_lvalue8.php", line 15, characters 5-16:
Invalid argument (Typing[4110])
  File "bad_inout_use_lvalue8.php", line 3, characters 18-20:
  Expected `int`
  File "bad_inout_use_lvalue8.php", line 15, characters 11-16:
  But got `?int` (use of `?->` operator)
